audio fix - creation of slug field - scrollbars

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6063,7 +6063,8 @@ a.text-dark:hover, a.text-dark:focus {
     border: 1px solid #ddd !important; } }
 
 body {
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  font-size: 2rem; }
 
 body.video .navbar-nav a.nav-link[data-mode="video"] {
   border-bottom: #000 solid 1px; }
@@ -6170,22 +6171,36 @@ span.text-note {
   background-color: rgba(255, 0, 0, 0.16); }
 
 section.text .text-column, section.text .text-notes {
-  height: 50vh;
+  height: 70vh;
   overflow-y: scroll;
   overflow-x: hidden; }
   section.text .text-column ul, section.text .text-notes ul {
     margin-left: 0;
     padding-left: 0; }
 
-section.text .text-column::-webkit-scrollbar-track, section.text .text-notes::-webkit-scrollbar-track {
-  background-color: #fff;
-  border-right: solid 1px #ff0000; }
+section.text .text-notes {
+  direction: rtl; }
 
-section.text .text-column::-webkit-scrollbar, section.text .text-notes::-webkit-scrollbar {
+*::-webkit-scrollbar-track {
+  background-color: #fff;
+  border-left: solid 1px #ff0000; }
+
+section.text .text-column::-webkit-scrollbar-track {
+  border-left: none; }
+
+*::-webkit-scrollbar {
   width: 10px; }
 
-section.text .text-column::-webkit-scrollbar-thumb, section.text .text-notes::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #ff0000; }
+
+footer.footer {
+  display: none; }
+
+.video-notes {
+  overflow-y: scroll;
+  height: 25vh;
+  direction: rtl; }
 
 #player {
   height: 212.5px; }
